fixing mobile size and add dark mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,11 +3,13 @@
 
 /* -------------- VARIABLES --------------- */
 :root {
+
     --body-color: rgb(250, 250, 250);
     --color-white: rgb(255, 255, 255);
 
     --text-color-second: rgb(68, 68, 68);
     --text-color-third: rgb(245, 90, 90);
+    --heading-color: rgb(68, 68, 68);
     /* rgb(30, 159, 171) 
     rgb(110, 87, 224) 
     rgb(40, 91, 212)
@@ -19,6 +21,30 @@
     --second-color: rgb(255, 106, 0);
     --third-color: rgb(192, 166, 49);
     --first-shadow-color: rgba(0, 0, 0, 0.1);
+
+    --button-color: #efefef;
+}
+
+.dark-mode {
+    --body-color: rgb(30, 30, 30);
+    --color-white: rgb(255, 255, 255);
+
+    --text-color-second: rgb(216, 216, 216);
+    --text-color-third: rgb(245, 90, 90);
+    --heading-color: rgb(0, 0, 0);
+    /* rgb(30, 159, 171) 
+    rgb(110, 87, 224) 
+    rgb(40, 91, 212)
+    */
+
+    --first-color:  rgb(255, 91, 41);
+    --first-color-hover: rgb(253, 63, 0);
+
+    --second-color: rgb(255, 106, 0);
+    --third-color: rgb(192, 166, 49);
+    --first-shadow-color: rgba(0, 0, 0, 0.1);
+
+    --button-color: #272727;
 }
 
 /* -------- BASE -------- */
@@ -32,6 +58,7 @@
 /* -------- SMOOTH SCROLL --------- */
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 /* ----------- CHANGE THE SCROLL BAR DESIGN ----------- */
@@ -84,7 +111,7 @@ h3 {
     font-size: 20px;
     font-weight: 600;
     margin-bottom: 15px;
-    color: var(--text-color-second);
+    color: var(--heading-color);
 }
 
 
@@ -92,14 +119,16 @@ h3 {
 .btn {
     font-weight: 500;
     padding: 12px 20px;
-    background: #efefef;
+    background: var(--button-color);
     border: none;
     border-radius: 10px;
     cursor: pointer;
     transition: .4s;
+    color: var(--text-color-second);
 }
 .btn>i {
     margin-left: 10px;
+    /* color: var(--heading-color); */
 }
 .btn:hover {
     background: var(--second-color);
@@ -111,9 +140,15 @@ i {
     font-size: 16px;
 }
 
+/* ================ global social icons design ================ */
+.icon > i {
+    color: var(--text-color-second);
+}
+
 /* =============== BASE ================ */
 body {
     background: var(--body-color);
+    overflow-x: hidden;
 }
 .container {
     width: 100%;
@@ -126,9 +161,9 @@ nav {
     display: flex;
     height: 90px;
     width: 100%;
-    justify-content: space-around;
+    justify-content: space-between;
     background: var(--body-color);
-    line-height: 70px;
+    line-height: 90px;
     padding-inline: 9vh;
     transition: .3s;
     z-index: 100;
@@ -168,6 +203,46 @@ nav {
 .nav-menu-btn i {
     font-size: 28px;
     cursor: pointer;
+}
+.nav-button {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+.nav-button .mode-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    background-color: var(--button-color);
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    overflow: hidden;
+    box-shadow: 1px 5px 8px 2px var(--first-shadow-color);
+}
+.nav-button .mode-btn .mode-icon {
+    font-display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    font-size: 30px;
+    font-weight: 600;
+    width: 20px;
+    
+}
+.sun, .moon {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+}
+
+.sun i, .moon i {
+    color: var(--text-color-second);
+}
+.disable {
+    display: none;
 }
 .active-link {
     position: relative;
@@ -260,7 +335,7 @@ nav {
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.25);
     cursor: pointer;
 }
-.icon:hover {
+.icon:hover i {
     color: var(--first-color);
 }
 
@@ -307,13 +382,33 @@ nav {
     gap: 5px;
     text-decoration: none;
     color: var(--text-color-second);
-    background: var(--color-white);
+    background: var(--button-color);
     border-radius: 30px;
     box-shadow: 0  2px 5px 0 rgba(0, 0, 0, 0.25);
 }
 .scroll-btn i {
     font-size: 20px;
     color: var(--text-color-second);
+}
+
+/* ==============  SWITCH MODE MOBILE SIZE ================== */
+
+
+.switch-mode {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    display: none;
+}
+.switch-mode > .btn {
+    width: 80%;
+    background-color: var(--button-color);
+    color: var(--text-color-second);
+}
+
+.switch-mode > .btn:hover {
+    background-color: var(--text-color-third);
+    color: var(--button-color);
 }
 
 /* ============= About info  =============== */
@@ -348,7 +443,10 @@ nav {
     margin: 10px;
 }
 .skill-header {
-    margin-bottom: 30px;
+    margin-bottom: 30px;  
+}
+.skill-header h3 {
+    color: var(--text-color-second);
 }
 .skill-list {
     display: flex;
@@ -511,12 +609,13 @@ footer {
     align-items: center;
     flex-direction: column;
     row-gap: 30px;
-    background: #f8f8f8;
+    background: var(--body-color);
     padding-block: 40px 60px;
 }
 .top-footer p {
     font-size: 25px;
     font-weight: 600;
+    color: var(--text-color-second);
 }
 .middle-footer .footer-menu {
     display: flex;
@@ -537,6 +636,7 @@ footer {
 .bottom-footer {
     font-size: 14px;
     margin-top: 10px;
+    color: var(--text-color-second);
 }
 
 /* ============= MEDIA QUERY 1024 PX / RESPONSIVE ================= */
@@ -625,6 +725,10 @@ footer {
     }
     .project-box {
         width: 80%;
+    }
+    .switch-mode {
+        justify-content: center;
+        display: flex;
     }
 }
 
